--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
           <div class="subheading mb-5">24 Corso Duca degli Abruzzi · Turin, ITALY 10129 · +39 (011) 090-7098 ·
             <a href="mailto:matteo.bertrone@polito.it">matteo.bertrone@polito.it</a>
           </div>
-          <p class="lead mb-5">My name is Matteo, and I'm Research Assistant at Department of Control and Computer Engineering of Politecnico di Torino, Italy, where in 2016 I obtained the MS.c in Computer Engineer with the highest mark.</p>
-<p>I'm currently working on networking topics, dealing with eXpress Data Path (XDP) and eBPF technology, with particular attention to high performance, network programmability, SDN and Cloud Computing.</p>
-<p>I'm core developer of Polycube (link), an Open Source framework to provide fast, in-kernel, virtualized network functions.</p>
-<p>In 2010, I participated in the Italian Olympics in Computer Science and I secured a bronze medal. I also took part in the International Collegiate Programming Contest - SWERC 2014 in Porto (Portugal) and SWERC 2013 Valencia (Spain), in a team representing Polytechnic of Turin. I collaborated with FCA (Fiat Chrysler Automobiles) by developing a network diagnostic tool called LinkDiagnostics.</p>
-<p>I started my work on IOVisor as part of a University project in 2015, in which I developed a deep-packet inspection module based on eBPF.</p>
-<p>Main interests are networking, SDN, Network Programmability, Cloud and Distributed Systems. In addition, I love cooking and photography.</p>
+          <div class="lead mb-5">
+            <p>My name is Matteo, and I'm Research Assistant at Department of Control and Computer Engineering of Politecnico di Torino, Italy, where in 2016 I obtained the MS.c in Computer Engineer with the highest mark.</p>
+            <p>I'm currently working on networking topics, dealing with eXpress Data Path (XDP) and eBPF technology, with particular attention to high performance, network programmability, SDN and Cloud Computing.</p>
+            <p>I'm core developer of Polycube (link), an Open Source framework to provide fast, in-kernel, virtualized network functions. Part of my focus was directed to study the feasibility and implementing an eBPF based iptables solution: pcn-iptables (link).</p>
+            <p>I spent some time visiting and collaborating with tech companies in Silicon Valley, as part of my research work.</p>
+            <p>In 2010, I participated in the Italian Olympics in Computer Science and I secured a bronze medal. I also took part in the International Collegiate Programming Contest - SWERC 2014 in Porto (Portugal) and SWERC 2013 Valencia (Spain), in a team representing Polytechnic of Turin.</p>
+            <p>I love cooking and photography.</p>
+          </div>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
