--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
             <p>I love cooking and photography.</p>
           </div>
           <div class="social-icons">
-            <a href="#">
+            <a href="https://www.linkedin.com/in/bertrone/">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#">
+            <a href="https://github.com/mbertrone">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#">
+            <a href="https://twitter.com/b4rtowski">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
+            <a href="https://scholar.google.it/citations?user=z2gFxNYAAAAJ">
+              <i class="fab fa-google"></i>
             </a>
           </div>
         </div>
