--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
           <div class="lead mb-5">
             <p>My name is Matteo, and I'm Research Assistant at Department of Control and Computer Engineering of Politecnico di Torino, Italy, where in 2016 I obtained the MS.c in Computer Engineer with the highest mark.</p>
             <p>I'm currently working on networking topics, dealing with eXpress Data Path (XDP) and eBPF technology, with particular attention to high performance, network programmability, SDN and Cloud Computing.</p>
-            <p>I'm core developer of Polycube (link), an Open Source framework to provide fast, in-kernel, virtualized network functions. Part of my focus was directed to study the feasibility and implementing an eBPF based iptables solution: pcn-iptables (link).</p>
+            <p>I'm core developer of Polycube, an Open Source framework to provide fast, in-kernel, virtualized network functions. Part of my focus was directed to study the feasibility and implementing an eBPF based iptables solution.</p>
             <p>I spent some time visiting and collaborating with tech companies in Silicon Valley, as part of my research work.</p>
-            <p>In 2010, I participated in the Italian Olympics in Computer Science and I secured a bronze medal. I also took part in the International Collegiate Programming Contest - SWERC 2014 in Porto (Portugal) and SWERC 2013 Valencia (Spain), in a team representing Polytechnic of Turin.</p>
+            <p>In 2010, I participated in the Italian Olympics in Computer Science and I secured a bronze medal. I also took part in the International Collegiate Programming Contest - SWERC 2014 in Porto (Portugal) and SWERC 2013 Valencia (Spain).</p>
             <p>I love cooking and photography.</p>
           </div>
           <div class="social-icons">
@@ -91,7 +91,10 @@
               <i class="fab fa-twitter"></i>
             </a>
             <a href="https://scholar.google.it/citations?user=z2gFxNYAAAAJ">
-              <i class="fab fa-google"></i>
+              <i class="fab fa-graduation-cap"></i>
+            </a>
+            <a href="https://www.flickr.com/photos/bertrone/">
+              <i class="fab fa-flickr"></i>
             </a>
           </div>
         </div>
