--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
             <a href="https://www.linkedin.com/in/bertrone/">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="https://scholar.google.it/citations?user=z2gFxNYAAAAJ">
-              <i class="fab fa-user-graduate"></i>
-            </a>
             <a href="https://github.com/mbertrone">
               <i class="fab fa-github"></i>
             </a>
             <a href="https://twitter.com/b4rtowski">
               <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://scholar.google.it/citations?user=z2gFxNYAAAAJ">
+              <i class="fas fa-user-graduate"></i>
             </a>
             <a href="https://www.flickr.com/photos/bertrone/">
               <i class="fab fa-flickr"></i>
