--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Fellow</h3>
-              <div class="subheading mb-3">Polytechnic of Turin</div>
+              <div class="subheading mb-3">Polytechnic of Turin - Turin, IT</div>
               <p>Working on eBPF (Extended Berkeley Packet Filter) and XDP (eXpress DataPath) to build high-performance and scalable networking solutions for linux. 
-Studying an eBPF-based clone of iptables, and working on Polycube (open source framework for build network functions with eBPF).</p>
+Studying an eBPF-based clone of iptables, and core developer of Polycube an open source framework for build network functions with eBPF.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2017 - Present</span>
@@ -121,7 +121,7 @@ Studying an eBPF-based clone of iptables, and working on Polycube (open source f
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Scholar</h3>
-              <div class="subheading mb-3">Polytechnic of Turin</div>
+              <div class="subheading mb-3">Polytechnic of Turin - Turin, IT</div>
               <p>Working on OpenSource networking solution for OpenStack (https://github.com/iovisor/iovisor-ovn).</p>
             </div>
             <div class="resume-date text-md-right">
@@ -135,15 +135,15 @@ Studying an eBPF-based clone of iptables, and working on Polycube (open source f
               <div class="subheading mb-3">Huawei Technologies - Santa Clara, CA</div>
               </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
+              <span class="text-primary">May 2018 - June 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Consultant</h3>
-              <div class="subheading mb-3">Nebbiolo Technologies, Inc. </div>
-              <p>As part of my research at Polytechnic of Turin, I collaborated with Nebbiolo Technologies to study and provide virtual network functions using eBPF.</p>
+              <div class="subheading mb-3">Nebbiolo Technologies, Inc. - Milpitas, CA</div>
+              <p>I collaborated with Nebbiolo Technologies to study, provide and deploy a virtual network solution using eBPF.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Febuary 2017 - May 2017</span>
@@ -164,7 +164,7 @@ Studying an eBPF-based clone of iptables, and working on Polycube (open source f
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Dotnet developer for FCA</h3>
-              <div class="subheading mb-3">EiS s.r.l - Turin</div>
+              <div class="subheading mb-3">EiS s.r.l - Turin, IT</div>
               <p>Development of a network analysis and diagnostic tool for FCA (Fiat Chrysler Automobiles).</p>
             </div>
             <div class="resume-date text-md-right">
@@ -184,24 +184,26 @@ Studying an eBPF-based clone of iptables, and working on Polycube (open source f
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
+              <h3 class="mb-0">Polytechnic of Turin</h3>
+              <div class="subheading mb-3">Master’s Degree, Computer Engineering, 110/110</div>
+              <div>The main objective of the MSc degree in Computer Engineering is to train engineers who can operate in sectors for the design, engineering, development, implementation and maintenance of computer applications and systems, information processing systems and complex information systems. The computer engineering graduate can work in industrial production and in the area of services to the general public and to businesses.</div>
               <p>GPA: 3.23</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">2014 - 2016</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
+              <h3 class="mb-0">Polytechnic of Turin</h3>
+              <div class="subheading mb-3">BSc degree in Computer Engineering, Computer Engineering, 110/110</div>
+              <div>Computer engineering students receive a solid grounding in basic sciences (mathematics, physics, chemistry) as well as engineering sciences, providing the tools and scientific methods to ensure a rigorous approach to engineering problems. 
+The analysis, design and maintenance of IT systems requires wide-ranging scientific knowledge in key areas of information engineering (electronics, automation, telecommunications), accompanied by thorough technological and methodological expertise in the main areas specific to computing.</div>
               <p>GPA: 3.56</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">2011 - 2014</span>
             </div>
           </div>
 
