--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
             <p>I love cooking and photography.</p>
           </div>
           <div class="social-icons">
-            <a href="https://www.linkedin.com/in/bertrone/">
+            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/bertrone/">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="https://github.com/mbertrone">
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/mbertrone">
               <i class="fab fa-github"></i>
             </a>
-            <a href="https://twitter.com/b4rtowski">
+            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/b4rtowski">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://scholar.google.it/citations?user=z2gFxNYAAAAJ">
+            <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.it/citations?user=z2gFxNYAAAAJ">
               <i class="fas fa-user-graduate"></i>
             </a>
-            <a href="https://www.flickr.com/photos/bertrone/">
+            <a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/bertrone/">
               <i class="fab fa-flickr"></i>
             </a>
           </div>
