--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="lead mb-5">
             <p>My name is Matteo, and I'm Research Assistant at Department of Control and Computer Engineering of Politecnico di Torino, Italy, where in 2016 I obtained the MS.c in Computer Engineer with the highest mark.</p>
             <p>I'm currently working on networking topics, dealing with eXpress Data Path (XDP) and eBPF technology, with particular attention to high performance, network programmability, SDN and Cloud Computing.</p>
-            <p>I'm core developer of Polycube, an Open Source framework to provide fast, in-kernel, virtualized network functions. Part of my focus was directed to study the feasibility and implementing an eBPF based iptables solution.</p>
+            <p>I'm core developer of Polycube, an Open Source framework to provide fast, in-kernel, virtualized network functions. My focus was also directed to study the feasibility and implementation of an eBPF based iptables version.</p>
             <p>I spent some time visiting and collaborating with tech companies in Silicon Valley, as part of my research work.</p>
             <p>In 2010, I participated in the Italian Olympics in Computer Science and I secured a bronze medal. I also took part in the International Collegiate Programming Contest - SWERC 2014 in Porto (Portugal) and SWERC 2013 Valencia (Spain).</p>
             <p>I love cooking and photography.</p>
