--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Fellow</h3>
               <div class="subheading mb-3">Polytechnic of Turin - Turin, IT</div>
-              <p>Working on eBPF (Extended Berkeley Packet Filter) and XDP (eXpress DataPath) to build high-performance and scalable networking solutions for linux. Studying an eBPF-based clone of iptables, and core developer of Polycube an open source framework for build network functions with eBPF.</p>
+              <p>Working on eBPF (Extended Berkeley Packet Filter) and XDP (eXpress DataPath) to build high-performance and scalable networking solutions for linux. Studying an eBPF-based clone of iptables. I'm core developer of Polycube an open source framework for build network functions with eBPF.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2017 - Present</span>
@@ -130,7 +130,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Scholar</h3>
               <div class="subheading mb-3">Polytechnic of Turin - Turin, IT</div>
-              <p>Working on OpenSource networking solution for OpenStack (https://github.com/iovisor/iovisor-ovn).</p>
+              <p>Working on Open Source networking solution for OpenStack.</p>
+              <p>(<a target="_blank" rel="noopener noreferrer" href="https://github.com/iovisor/iovisor-ovn">https://github.com/iovisor/iovisor-ovn</a>)</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Jan 2017 - Aug 2017</span>
@@ -151,7 +152,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Consultant</h3>
               <div class="subheading mb-3">Nebbiolo Technologies, Inc. - Milpitas, CA</div>
-              <p>I collaborated with Nebbiolo Technologies to study, provide and deploy a virtual network solution using eBPF.</p>
+              <p>I collaborated with Nebbiolo Technologies to study, provide and deploy a virtual network solutions, using eBPF.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Feb 2017 - May 2017</span>
@@ -162,7 +163,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Intern</h3>
               <div class="subheading mb-3">PLUMgrid Inc. (acquired by VMware) - Santa Clara, CA</div>
-              <p>As part of my Master thesis, I spent some months visiting PLUMgrid, in Silicon Valley. I collaborated with smart and nice guys, who had first hand knowledge of bpf and networing topics which, at the time, were really new to linux community.</p>
+              <p>As part of my Master thesis, I spent some months visiting PLUMgrid, in Silicon Valley. I collaborated with smart and nice guys, who had first hand knowledge of BPF and networing which, at the time, were really new and hot topics.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2016 - Jan 2017</span>
@@ -173,7 +174,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Dotnet developer for FCA</h3>
               <div class="subheading mb-3">EiS s.r.l - Turin, IT</div>
-              <p>Development of a network analysis and diagnostic tool for FCA (Fiat Chrysler Automobiles).</p>
+              <p>Development of a network analysis and diagnostic tool for Fiat Chrysler Automobiles.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Mar 2014 - May 2014</span>
@@ -236,7 +237,6 @@
               <h3 class="mb-0">Polytechnic of Turin</h3>
               <div class="subheading mb-3">Master’s Degree, Computer Engineering, 110/110</div>
               <div>The main objective of the MSc degree in Computer Engineering is to train engineers who can operate in sectors for the design, engineering, development, implementation and maintenance of computer applications and systems, information processing systems and complex information systems. The computer engineering graduate can work in industrial production and in the area of services to the general public and to businesses.</div>
-              <p>GPA: 3.23</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2014 - 2016</span>
@@ -249,7 +249,6 @@
               <div class="subheading mb-3">BSc degree in Computer Engineering, Computer Engineering, 110/110</div>
               <div>Computer engineering students receive a solid grounding in basic sciences (mathematics, physics, chemistry) as well as engineering sciences, providing the tools and scientific methods to ensure a rigorous approach to engineering problems.
 The analysis, design and maintenance of IT systems requires wide-ranging scientific knowledge in key areas of information engineering (electronics, automation, telecommunications), accompanied by thorough technological and methodological expertise in the main areas specific to computing.</div>
-              <p>GPA: 3.56</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2011 - 2014</span>
