--- a/index.html
+++ b/index.html
@@ -262,16 +262,13 @@ The analysis, design and maintenance of IT systems requires wide-ranging scienti
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Projects and Talks</h2>
+          <h2 class="mb-5">Projects</h2>
 
-          <div class="subheading mb-3">Open Source projects</div>
-            <li>
-              <h3>Polycube</h3>
-              <p>Polycube is an open source framework to build and provide fast network functions, using eBPF and XDP</p>
-            </li>
-            <li>
-              <h3>Iovisor-OVN</h3>
-            </li>
+          <div class="subheading mb-3">Polycube</div>
+          <p>Polycube is an open source framework to build fast network functions with XDP and eBPF</p>
+          <div class="subheading mb-3">Iovisor-ovn</div>
+          
+          
 <!--           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
