--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Matteo Bertrone - Personal Page</title>
+    <title>Matteo Bertrone</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
