--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ The analysis, design and maintenance of IT systems requires wide-ranging scienti
           <li>pcn-iptables:</li>
           <li>pcn-k8s:</li>
           </ul>
-          <p>Website: <a target="_blank" rel="noopener noreferrer" href="http://polycube.network">http://polycube.network</a></p>
+<!--           <p>Website: <a target="_blank" rel="noopener noreferrer" href="http://polycube.network">http://polycube.network</a></p> -->
           
           <div class="subheading mb-3">Iovisor-ovn</div>
           <p>Iovisor-ovn is a network plugin for OpenStack, that provides a network layer based on bpf.</p>
