--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Intern</h3>
               <div class="subheading mb-3">PLUMgrid Inc. (acquired by VMware) - Santa Clara, CA</div>
-              <p>As part of my Master thesis, I spent some months visiting PLUMgrid, in Silicon Valley. I collaborated with smart and nice guys, who had first hand knowledge of BPF and networing which, at the time, were really new and hot topics.</p>
+              <p>As part of my Master thesis, I spent some months visiting PLUMgrid, in Silicon Valley. I collaborated with smart and nice guys, with first hand knowledge of BPF and networing. I've learned a lot from them, while developing iovisor-ovn.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2016 - Jan 2017</span>
