--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#pubblications">Pubblications</a>
+            <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -192,12 +192,12 @@
       </section>
 
       <hr class="m-0">
-            <section class="pubblications-section p-3 p-lg-5 d-flex flex-column" id="pubblications">
+            <section class="publications-section p-3 p-lg-5 d-flex flex-column" id="publications">
               <div class="my-auto">
-                <h2 class="mb-5">Pubblications</h2>
+                <h2 class="mb-5">Publications</h2>
 
-                <div class="pubblications-item d-flex flex-column flex-md-row mb-5">
-                  <div class="pubblications-content mr-auto">
+                <div class="publications-item d-flex flex-column flex-md-row mb-5">
+                  <div class="publications-content mr-auto">
                     <h3 class="mb-0">Accelerating Linux Security with eBPF iptables</h3>
                     <div class="subheading mb-3">ACM SIGCOMM 2018 Conference Posters and Demos, Budapest (H), 20-25 August 2018</div>
                     <p> This paper presents an eBPF-based prototype, bpf-iptables, which emulates the iptables filtering semantic and exploits a more efficient matching algorithm. Our prototype outperforms iptables, particularly when a high number of rules is involved, without requiring custom kernels or invasive software frameworks.
@@ -208,7 +208,7 @@
                   </div>
                 </div>
 
-                <div class="pubblications-item d-flex flex-column flex-md-row mb-5">
+                <div class="publications-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
                     <h3 class="mb-0">Toward an eBPF-based clone of iptables</h3>
                     <div class="subheading mb-3">Netdev 0x12, The Technical Conference on Linux Networking, Montréal (Canada), 11-13 July 2018</div>
@@ -219,7 +219,7 @@
                   </div>
                 </div>
 
-                <div class="pubblications-item d-flex flex-column flex-md-row mb-5">
+                <div class="publications-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
                     <h3 class="mb-0">Creating Complex Network Services with eBPF: Experience and Lessons Learned</h3>
                     <div class="subheading mb-3">IEEE International Conference on High Performance Switching and Routing, Bucharest (RO), 17-20 June 2018</div>
