--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
           </h1>
           <div class="subheading mb-5">24 Corso Duca degli Abruzzi · Turin, ITALY 10129 · +39 (011) 090-7098 ·
             <a href="mailto:matteo.bertrone@polito.it">matteo.bertrone@polito.it</a>
+            <p></p>
+            <p><a href="https://github.com/mbertrone/mbertrone.github.io/raw/master/cv_matteo_bertrone.pdf">Download CV</a></p>
           </div>
           <div class="lead mb-5">
             <p>My name is Matteo, and I'm Research Assistant at Department of Control and Computer Engineering of Politecnico di Torino, Italy, where in 2016 I obtained the MS.c in Computer Engineer with the highest mark.</p>
