--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@ The analysis, design and maintenance of IT systems requires wide-ranging scienti
           <p>Polycube is an open source framework to build fast network functions with XDP and eBPF</p>
           <p>On top of that we built couple of applications:</p>
           <ul>
-          <li>pcn-iptables:</li>
-          <li>pcn-k8s:</li>
+          <li>pcn-iptables: a much more efficient clone of iptables firewall, exploiting efficient algorithms, XDP optimizations, and leading up to 10x performance gain.</li>
+          <li>pcn-k8s: a brand new network provider for Kubernetes, exploiting eBPF and XDP optimizations and performance gain.</li>
           </ul>
-<!--           <p>Website: <a target="_blank" rel="noopener noreferrer" href="http://polycube.network">http://polycube.network</a></p> -->
+          <p>Website: <a target="_blank" rel="noopener noreferrer" href="https://github.com/polycube-network/polycube">https://github.com/polycube-network/polycube</a></p>
           
           <div class="subheading mb-3">Iovisor-ovn</div>
           <p>Iovisor-ovn is a network plugin for OpenStack, that provides a network layer based on bpf.</p>
