--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <span class="text-primary">Bertrone</span>
           </h1>
           <div class="subheading mb-5">24 Corso Duca degli Abruzzi · Turin, ITALY 10129 · +39 (011) 090-7098 ·
-            <a href="mailto:matteo.bertrone@polito.it">matteo.bertrone@polito.it</a>
+            <a href="mailto:m.bertrone@gmail.com">m.bertrone@gmail.com</a>
             <p></p>
             <p><a href="https://mbertrone.github.io/cv_matteo_bertrone.pdf" target="_blank">Download CV</a></p>
           </div>
