--- a/index.html
+++ b/index.html
@@ -200,6 +200,18 @@
 
                 <div class="publications-item d-flex flex-column flex-md-row mb-5">
                   <div class="publications-content mr-auto">
+                    <h3 class="mb-0">Securing Linux with a Faster and Scalable Iptables</h3>
+                    <div class="subheading mb-3">Draft, 1 December 2018</div>
+                    <p> This paper presents an eBPF-based firewall, bpf-iptables, which emulates the iptables filtering semantic while guaranteeing higher throughput outperforming other Linux-based firewalls particularly when a high number of rules is involved.
+                    </p>
+                  </div>
+                  <div class="resume-date text-md-right">
+                    <span class="text-primary"><a target="_blank" rel="noopener noreferrer" href="https://mbertrone.github.io/documents/21-Securing_Linux_with_a_Faster_and_Scalable_Iptables.pdf">Download PDF</a></span>
+                  </div>
+                </div>
+                
+                <div class="publications-item d-flex flex-column flex-md-row mb-5">
+                  <div class="publications-content mr-auto">
                     <h3 class="mb-0">Accelerating Linux Security with eBPF iptables</h3>
                     <div class="subheading mb-3">ACM SIGCOMM 2018 Conference Posters and Demos, Budapest (H), 20-25 August 2018</div>
                     <p> This paper presents an eBPF-based prototype, bpf-iptables, which emulates the iptables filtering semantic and exploits a more efficient matching algorithm. Our prototype outperforms iptables, particularly when a high number of rules is involved, without requiring custom kernels or invasive software frameworks.
