--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <h1 class="mb-0">Matteo
             <span class="text-primary">Bertrone</span>
           </h1>
-          <div class="subheading mb-5">24 Corso Duca degli Abruzzi · Turin, ITALY 10129 · +39 (011) 090-7098 ·
+          <div class="subheading mb-5">24 Corso Duca degli Abruzzi · Turin, ITALY 10129 · +39 (334) 798-6923 ·
             <a href="mailto:m.bertrone@gmail.com">m.bertrone@gmail.com</a>
             <p></p>
             <p><a href="https://mbertrone.github.io/cv_matteo_bertrone.pdf" target="_blank">Download CV</a></p>
@@ -125,24 +125,12 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Research Fellow</h3>
+              <h3 class="mb-0">Research Assistant</h3>
               <div class="subheading mb-3">Polytechnic of Turin - Turin, IT</div>
               <p>Working on eBPF (Extended Berkeley Packet Filter) and XDP (eXpress DataPath) to build high-performance and scalable networking solutions for linux. Studying an eBPF-based clone of iptables. I'm core developer of Polycube an open source framework for build network functions with eBPF.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Sep 2017 - Present</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Research Scholar</h3>
-              <div class="subheading mb-3">Polytechnic of Turin - Turin, IT</div>
-              <p>Working on Open Source networking solution for OpenStack.</p>
-              <p>(<a target="_blank" rel="noopener noreferrer" href="https://github.com/iovisor/iovisor-ovn">https://github.com/iovisor/iovisor-ovn</a>)</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Jan 2017 - Aug 2017</span>
+              <span class="text-primary">Jan 2017 - Present</span>
             </div>
           </div>
 
