--- a/index.html
+++ b/index.html
@@ -84,14 +84,15 @@
           <h1 class="mb-0">Matteo
             <span class="text-primary">Bertrone</span>
           </h1>
-          <div class="subheading mb-5">24 Corso Duca degli Abruzzi · Turin, ITALY 10129 · +39 (334) 798-6923 ·
+          <div class="subheading mb-5">Milan, ITALY · +39 (334) 798-6923 ·
             <a href="mailto:m.bertrone@gmail.com">m.bertrone@gmail.com</a>
             <p></p>
             <p><a href="https://mbertrone.github.io/cv_matteo_bertrone.pdf" target="_blank">Download CV</a></p>
           </div>
           <div class="lead mb-5">
-            <p>My name is Matteo, and I'm Research Assistant at Department of Control and Computer Engineering of Politecnico di Torino, Italy, where in 2016 I obtained the MS.c in Computer Engineer with the highest mark.</p>
-            <p>I'm currently working on networking topics, dealing with eXpress Data Path (XDP) and eBPF technology, with particular attention to high performance, network programmability, SDN and Cloud Computing.</p>
+            <p>My name is Matteo and I'm Software Engineer at SysDig, working on SysDig Secure, Kubernetes security for enterprise cloud-native stacks.</p>
+            <p>Previously Research Assistant at Department of Control and Computer Engineering of Politecnico di Torino, Italy, where in 2016 I obtained the MS.c in Computer Engineer with the highest mark.</p>
+            <p>I've touched networking topics, dealing with eXpress Data Path (XDP) and eBPF technology, with particular attention to high performance, network programmability, SDN and Cloud Computing.</p>
             <p>I'm core developer of Polycube, an Open Source framework to provide fast, in-kernel, virtualized network functions. My focus was also directed to study the feasibility and implementation of an eBPF based iptables version.</p>
             <p>I spent some time visiting and collaborating with tech companies in Silicon Valley, as part of my research work.</p>
             <p>In 2010, I participated in the Italian Olympics in Computer Science and I secured a bronze medal. I also took part in the International Collegiate Programming Contest - SWERC 2014 in Porto (Portugal) and SWERC 2013 Valencia (Spain).</p>
@@ -125,12 +126,23 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Software Engineer</h3>
+              <div class="subheading mb-3">SysDig - Milan, IT</div>
+              <p>Working on Sysdig Secure, Kubernetes security for enterprise cloud-native stacks.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Jul 2019 - Present</span>
+            </div>
+          </div>
+          
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Assistant</h3>
               <div class="subheading mb-3">Polytechnic of Turin - Turin, IT</div>
               <p>Working on eBPF (Extended Berkeley Packet Filter) and XDP (eXpress DataPath) to build high-performance and scalable networking solutions for linux. Studying an eBPF-based clone of iptables. I'm core developer of Polycube an open source framework for build network functions with eBPF.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Jan 2017 - Present</span>
+              <span class="text-primary">Jan 2017 - Jun 2019</span>
             </div>
           </div>
 
