--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <span class="text-primary">Bertrone</span>
           </h1>
           <div class="subheading mb-5">Milan, ITALY · +39 (334) 798-6923 ·
-            <a href="mailto:m.bertrone@gmail.com">m.bertrone@gmail.com</a>
+            <a href="mailto:m.bertrone AT gmail DOT com">m.bertrone AT gmail DOT com</a>
             <p></p>
             <p><a href="https://mbertrone.github.io/cv_matteo_bertrone.pdf" target="_blank">Download CV</a></p>
           </div>
